<resources>
    <string name="app_name">module_sample</string>
    <string name="sample_result_check">按样品结果复核</string>
    <string name="sample">样品</string>
    <string name="index">序号:</string>
    <string name="sample_name">样品名称</string>
    <string name="sample_code">样品编码</string>
    <string name="sample_separation_type">分样类型</string>
    <string name="sample_point">采样点</string>
    <string name="material_code">物料编码</string>
    <string name="material_name">物料名称</string>
    <string name="quality_standard">质量标准</string>
    <string name="sample_type">样品类型</string>
    <string name="sample_status">状态</string>
    <string name="register_time">登记时间</string>

    <string name="check_project">检测项目</string>
    <string name="repeat_number">重复号</string>
    <string name="vision_number">版本号</string>
    <string name="check_method">检测方法</string>
    <string name="operating_procedures">操作规程</string>
    <string name="check_person">检验员</string>
    <string name="check_time">检测时间</string>
    <string name="memo">备注</string>
    <string name="sample_refuse">检测项目拒绝</string>
    <string name="sample_dealer">处理人</string>
    <string name="examine">审核</string>
    <string name="active">激活</string>
</resources>
